--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <script src="script.js"></script>
         </main>
         <footer>
-            <!-- <p>&copy; 2016 Country App</p> -->
+            <p><span>Country Data Index</span><br>By Max W. / 2023</p>
         </footer>
     </div>
 </html>
