Formatted for mobile devices

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
+<div class="background">
 <body>
     <div id="wrapper">
         <header>
@@ -41,4 +42,5 @@
             <p><span>Country Data Index</span><br>By Max W. / 2023</p>
         </footer>
     </div>
+  </div> 
 </html>
